[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Level1/EnvirSprites/Traps/ArrowTrap.png" type="Texture" id=1]
[ext_resource path="res://Entities/Hemwick/Bows/Arrows/SimpleArrow.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level1/EnvirSprites/Traps/ArrowTrap.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Hemwick/Bows/BowShoot2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Hemwick/Bows/BowShoot1.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Hemwick/Bows/BowShoot5.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Hemwick/Bows/BowShoot3.mp3" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Hemwick/Bows/BowShoot4.mp3" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.36448
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Activate:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trap/SimpleArrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.47651, -0.0129814 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Activate2:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Activate3:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reload"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Trap/SimpleArrow:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.46915, -0.0129814 ), Vector2( 2.90126, -0.0129814 ), Vector2( 2.4806, -0.0129814 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trap/SimpleArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Activate:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Activate2:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Activate3:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Activate4:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Trap/SimpleArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.47651, -0.0129814 ), Vector2( 11.0695, -0.0129814 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Trap/SimpleArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
}, {
"args": [  ],
"method": "_shootarrowsounds"
}, {
"args": [  ],
"method": "_reload"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Activate:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Activate2:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Activate3:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Activate4:enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="ArrowTrap" type="Node2D"]
script = ExtResource( 3 )

[node name="Trap" type="StaticBody2D" parent="."]
z_index = 1
collision_layer = 8
collision_mask = 0

[node name="SimpleArrow" type="Sprite" parent="Trap"]
position = Vector2( 2.47651, -0.0129814 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Trap"]
position = Vector2( -1.03373, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trap"]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Activate" type="RayCast2D" parent="."]
position = Vector2( 50, -10.1136 )
enabled = true

[node name="Activate2" type="RayCast2D" parent="."]
position = Vector2( 87.2704, -10.1136 )
enabled = true

[node name="Activate3" type="RayCast2D" parent="."]
position = Vector2( 122.947, -10.1136 )
enabled = true

[node name="Activate4" type="RayCast2D" parent="."]
position = Vector2( -7.30767, -0.202909 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 250 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Reload = SubResource( 4 )
anims/Shoot = SubResource( 3 )

[node name="Sounds" type="Node2D" parent="."]

[node name="BowShoot1" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2( 4.886, -0.02599 )
stream = ExtResource( 5 )
max_distance = 800.0
bus = "SFX"

[node name="BowShoot2" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2( 4.886, -0.02599 )
stream = ExtResource( 4 )
max_distance = 800.0
bus = "SFX"

[node name="BowShoot3" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2( 4.886, -0.02599 )
stream = ExtResource( 7 )
max_distance = 800.0
bus = "SFX"

[node name="BowShoot4" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2( 4.886, -0.02599 )
stream = ExtResource( 8 )
max_distance = 800.0
bus = "SFX"

[node name="BowShoot5" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2( 4.886, -0.02599 )
stream = ExtResource( 6 )
max_distance = 800.0
bus = "SFX"
